crates/service/tests/completion/snapshots/features__completion__global__preferred_type_by_call.snap
---
source: crates/service/tests/completion/global.rs
expression: response
---
[
  {
    "label": "$a",
    "labelDetails": {
      "description": "i32"
    },
    "kind": 6,
    "sortText": "1",
    "textEdit": {
      "range": {
        "start": {
          "line": 9,
          "character": 17
        },
        "end": {
          "line": 9,
          "character": 18
        }
      },
      "newText": "$a"
    }
  },
  {
    "label": "$b",
    "labelDetails": {
      "description": "i64"
    },
    "kind": 6,
    "sortText": "1",
    "textEdit": {
      "range": {
        "start": {
          "line": 9,
          "character": 17
        },
        "end": {
          "line": 9,
          "character": 18
        }
      },
      "newText": "$b"
    }
  },
  {
    "label": "$c",
    "labelDetails": {
      "description": "f32"
    },
    "kind": 6,
    "sortText": "1",
    "textEdit": {
      "range": {
        "start": {
          "line": 9,
          "character": 17
        },
        "end": {
          "line": 9,
          "character": 18
        }
      },
      "newText": "$c"
    }
  },
  {
    "label": "$d",
    "labelDetails": {
      "description": "f64"
    },
    "kind": 6,
    "sortText": "0",
    "textEdit": {
      "range": {
        "start": {
          "line": 9,
          "character": 17
        },
        "end": {
          "line": 9,
          "character": 18
        }
      },
      "newText": "$d"
    }
  }
]
